dodate slike karata

--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,10 @@
 {
-"manifest_version": 3,
-"version": "1.0",
-"name": "blackjack",
-"action": {
+  "manifest_version": 3,
+  "version": "1.0",
+  "name": "blackjack",
+  "action": {
     "default_popup": "index.html",
-    "defaul_icon": "NicePng_poker-table-png_1898993.png"
-},
-"permissions": [
-    "storage",
-    "notifications"
-    ] 
+    "defaul_icon": "table.png"
+  },
+  "permissions": ["storage", "notifications"]
 }
